fix: submission saved

--- a/dataset_exploration/dataset_exploration(multivariate).ipynb
+++ b/dataset_exploration/dataset_exploration(multivariate).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-05T20:22:50.420959Z",
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-05T20:23:09.944467Z",
@@ -424,411 +424,15 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(31715, 13)\n"
+     "ename": "NameError",
+     "evalue": "name 'OneHotEncoder' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/gesposito/project/predict-shares-online-news/dataset_exploration/dataset_exploration(multivariate).ipynb Cell 9\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Blegionlogin.polito.it/home/gesposito/project/predict-shares-online-news/dataset_exploration/dataset_exploration%28multivariate%29.ipynb#X11sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m enc \u001b[39m=\u001b[39m OneHotEncoder()\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Blegionlogin.polito.it/home/gesposito/project/predict-shares-online-news/dataset_exploration/dataset_exploration%28multivariate%29.ipynb#X11sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m encoded_df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat([df_dev[\u001b[39m'\u001b[39m\u001b[39mweekday\u001b[39m\u001b[39m'\u001b[39m], df_dev[\u001b[39m'\u001b[39m\u001b[39mdata_channel\u001b[39m\u001b[39m'\u001b[39m]], axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Blegionlogin.polito.it/home/gesposito/project/predict-shares-online-news/dataset_exploration/dataset_exploration%28multivariate%29.ipynb#X11sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m enc\u001b[39m.\u001b[39mfit(encoded_df)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'OneHotEncoder' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>timedelta</th>\n",
-       "      <th>n_tokens_title</th>\n",
-       "      <th>n_tokens_content</th>\n",
-       "      <th>n_unique_tokens</th>\n",
-       "      <th>n_non_stop_words</th>\n",
-       "      <th>n_non_stop_unique_tokens</th>\n",
-       "      <th>num_hrefs</th>\n",
-       "      <th>num_self_hrefs</th>\n",
-       "      <th>num_imgs</th>\n",
-       "      <th>num_videos</th>\n",
-       "      <th>...</th>\n",
-       "      <th>weekday_sunday</th>\n",
-       "      <th>weekday_thursday</th>\n",
-       "      <th>weekday_tuesday</th>\n",
-       "      <th>weekday_wednesday</th>\n",
-       "      <th>data_channel_bus</th>\n",
-       "      <th>data_channel_entertainment</th>\n",
-       "      <th>data_channel_lifestyle</th>\n",
-       "      <th>data_channel_socmed</th>\n",
-       "      <th>data_channel_tech</th>\n",
-       "      <th>data_channel_world</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>121.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>1015.0</td>\n",
-       "      <td>0.422018</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.545031</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>532.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>503.0</td>\n",
-       "      <td>0.569697</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.737542</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>435.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>232.0</td>\n",
-       "      <td>0.646018</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.748428</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>134.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>171.0</td>\n",
-       "      <td>0.722892</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.867925</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>728.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>286.0</td>\n",
-       "      <td>0.652632</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.800000</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31710</th>\n",
-       "      <td>37.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>440.0</td>\n",
-       "      <td>0.564103</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.718978</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31711</th>\n",
-       "      <td>52.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31712</th>\n",
-       "      <td>121.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>969.0</td>\n",
-       "      <td>0.489583</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.710623</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31713</th>\n",
-       "      <td>503.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>1976.0</td>\n",
-       "      <td>0.412308</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.621080</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31714</th>\n",
-       "      <td>106.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>261.0</td>\n",
-       "      <td>0.616279</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.780822</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>31715 rows × 59 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       timedelta  n_tokens_title  n_tokens_content  n_unique_tokens  \\\n",
-       "0          121.0            12.0            1015.0         0.422018   \n",
-       "1          532.0             9.0             503.0         0.569697   \n",
-       "2          435.0             9.0             232.0         0.646018   \n",
-       "3          134.0            12.0             171.0         0.722892   \n",
-       "4          728.0            11.0             286.0         0.652632   \n",
-       "...          ...             ...               ...              ...   \n",
-       "31710       37.0            11.0             440.0         0.564103   \n",
-       "31711       52.0            14.0               0.0         0.000000   \n",
-       "31712      121.0             9.0             969.0         0.489583   \n",
-       "31713      503.0            11.0            1976.0         0.412308   \n",
-       "31714      106.0            13.0             261.0         0.616279   \n",
-       "\n",
-       "       n_non_stop_words  n_non_stop_unique_tokens  num_hrefs  num_self_hrefs  \\\n",
-       "0                   1.0                  0.545031       10.0             6.0   \n",
-       "1                   1.0                  0.737542        9.0             0.0   \n",
-       "2                   1.0                  0.748428       12.0             3.0   \n",
-       "3                   1.0                  0.867925        9.0             5.0   \n",
-       "4                   1.0                  0.800000        5.0             2.0   \n",
-       "...                 ...                       ...        ...             ...   \n",
-       "31710               1.0                  0.718978       10.0             2.0   \n",
-       "31711               0.0                  0.000000        0.0             0.0   \n",
-       "31712               1.0                  0.710623        6.0             5.0   \n",
-       "31713               1.0                  0.621080       21.0             3.0   \n",
-       "31714               1.0                  0.780822        5.0             4.0   \n",
-       "\n",
-       "       num_imgs  num_videos  ...  weekday_sunday  weekday_thursday  \\\n",
-       "0          33.0         1.0  ...             0.0               0.0   \n",
-       "1           NaN         1.0  ...             0.0               1.0   \n",
-       "2           4.0         1.0  ...             0.0               0.0   \n",
-       "3           0.0         NaN  ...             0.0               0.0   \n",
-       "4           NaN         0.0  ...             0.0               1.0   \n",
-       "...         ...         ...  ...             ...               ...   \n",
-       "31710       NaN         NaN  ...             0.0               0.0   \n",
-       "31711       0.0         NaN  ...             0.0               0.0   \n",
-       "31712       2.0         1.0  ...             0.0               0.0   \n",
-       "31713       1.0         3.0  ...             0.0               0.0   \n",
-       "31714       1.0         1.0  ...             0.0               0.0   \n",
-       "\n",
-       "       weekday_tuesday  weekday_wednesday  data_channel_bus  \\\n",
-       "0                  1.0                0.0               1.0   \n",
-       "1                  0.0                0.0               0.0   \n",
-       "2                  0.0                1.0               0.0   \n",
-       "3                  0.0                1.0               1.0   \n",
-       "4                  0.0                0.0               0.0   \n",
-       "...                ...                ...               ...   \n",
-       "31710              1.0                0.0               0.0   \n",
-       "31711              0.0                0.0               0.0   \n",
-       "31712              1.0                0.0               0.0   \n",
-       "31713              0.0                0.0               0.0   \n",
-       "31714              0.0                1.0               0.0   \n",
-       "\n",
-       "       data_channel_entertainment  data_channel_lifestyle  \\\n",
-       "0                             0.0                     0.0   \n",
-       "1                             0.0                     0.0   \n",
-       "2                             0.0                     1.0   \n",
-       "3                             0.0                     0.0   \n",
-       "4                             0.0                     0.0   \n",
-       "...                           ...                     ...   \n",
-       "31710                         0.0                     0.0   \n",
-       "31711                         0.0                     1.0   \n",
-       "31712                         0.0                     0.0   \n",
-       "31713                         0.0                     1.0   \n",
-       "31714                         0.0                     0.0   \n",
-       "\n",
-       "       data_channel_socmed  data_channel_tech  data_channel_world  \n",
-       "0                      0.0                0.0                 0.0  \n",
-       "1                      0.0                1.0                 0.0  \n",
-       "2                      0.0                0.0                 0.0  \n",
-       "3                      0.0                0.0                 0.0  \n",
-       "4                      0.0                1.0                 0.0  \n",
-       "...                    ...                ...                 ...  \n",
-       "31710                  0.0                0.0                 1.0  \n",
-       "31711                  0.0                0.0                 0.0  \n",
-       "31712                  0.0                1.0                 0.0  \n",
-       "31713                  0.0                0.0                 0.0  \n",
-       "31714                  1.0                0.0                 0.0  \n",
-       "\n",
-       "[31715 rows x 59 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
