add comments on dataset_exploration(multivariate).ipynb

--- a/dataset_exploration/dataset_exploration(multivariate).ipynb
+++ b/dataset_exploration/dataset_exploration(multivariate).ipynb
@@ -287,7 +287,7 @@
     "working_df_dev['avg_negative_polarity'] = working_df_dev['avg_negative_polarity'].abs()\n",
     "working_df_dev['num_keywords'].fillna(0, inplace=True)\n",
     "working_df_dev['num_hrefs'] = np.log(1 + working_df_dev['num_hrefs'])\n",
-    "# working_df_dev['shares'] = np.log(working_df_dev['shares'])\n",
+    "# working_df_dev['shares'] = np.log(working_df_dev['shares']) # --> it is done later\n",
     "\n",
     "std_scaler = StandardScaler().fit(working_df_dev[['kw_avg_min', 'kw_avg_max', 'kw_min_avg', 'kw_avg_avg']])\n",
     "scaled_features = std_scaler.transform(working_df_dev[['kw_avg_min', 'kw_avg_max', 'kw_min_avg', 'kw_avg_avg']])\n",
