add: make the basic structure of the model's grid search

--- a/3_models_selection/model_gradientboostingregressor.ipynb
+++ b/3_models_selection/model_gradientboostingregressor.ipynb
@@ -255,6 +255,50 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Generate final CSV"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "X = working_df_dev.drop(columns=[\"shares\"]).values\n",
+    "y = working_df_dev[\"shares\"].values\n",
+    "\n",
+    "best_model = GradientBoostingRegressor(**gs.best_params_)\n",
+    "best_model.fit(X, y)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Make final predictions\n",
+    "y_pred = best_model.predict(df_working_df_eval.values)\n",
+    "final_preds = np.exp(y_pred)\n",
+    "# Write CSV\n",
+    "id_col = df_eval['id']\n",
+    "new_df = pd.DataFrame(columns=['Id', 'Predicted'])\n",
+    "new_df['Id'] = id_col\n",
+    "new_df['Predicted'] = final_preds\n",
+    "print(new_df.describe())\n",
+    "new_df.to_csv('../output/NAME.csv', columns=['Id','Predicted'], index=False)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
