--- a/3_models_selection/model_xgboost_without_logs.ipynb
+++ b/3_models_selection/model_xgboost_without_logs.ipynb
@@ -583,9 +583,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Generate final CSV"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Get the best configuration from the grid search"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Make final predictions\n",
@@ -597,8 +616,11 @@
     "new_df['Id'] = id_col\n",
     "new_df['Predicted'] = final_preds\n",
     "print(new_df.describe())\n",
-    "new_df.to_csv('../output/output_xgboost_submit.csv', columns=['Id','Predicted'], index=False)"
-   ]
+    "new_df.to_csv('../output/NAME.csv', columns=['Id','Predicted'], index=False)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
