--- a/3_models_selection/model_xgboost_with_logs.ipynb
+++ b/3_models_selection/model_xgboost_with_logs.ipynb
@@ -599,6 +599,46 @@
     "print(new_df.describe())\n",
     "new_df.to_csv('../output/output_xgboost_submit.csv', columns=['Id','Predicted'], index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Generate final CSV"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Get the best configuration from the grid search"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Make final predictions\n",
+    "y_pred = xgb_r.predict(df_working_df_eval.values)\n",
+    "final_preds = np.exp(y_pred)\n",
+    "# Write CSV\n",
+    "id_col = df_eval['id']\n",
+    "new_df = pd.DataFrame(columns=['Id', 'Predicted'])\n",
+    "new_df['Id'] = id_col\n",
+    "new_df['Predicted'] = final_preds\n",
+    "print(new_df.describe())\n",
+    "new_df.to_csv('../output/NAME.csv', columns=['Id','Predicted'], index=False)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
